@@ -1,5 +1,12 @@
 1998-10-13  Martin Baulig  <martin@home-of-linux.org>
 
+	* client/client.c: Added the following functions:
+	`client_document_set_auto_indent', `client_document_set_status_bar',
+	`client_document_set_word_wrap', `client_document_set_read_only',
+	`client_document_set_split_screen', `client_document_set_scroll_ball'.
+	
+1998-10-13  Martin Baulig  <martin@home-of-linux.org>
+
 	* client/Makefile.am (geditincludedir): New variable pointing to
 	`$(includedir)/gedit'. We need to install the header files to make
 	it possible to write plugins outside the gedit module.
